# drf-authentication

./: .gitignore  README.md  setup.cfg  setup.py
auth/: setup.py
auth/api/: serializers.py  urls.py  views.py
auth/auth/: settings.py  urls.py
docs/: api_endpoints.rst  autodoc.md  conf.py  email_configuration.rst  getting_started.md  getting_started.rst  index.html  index.md  index.rst
docs/_build/doctrees/: environment.pickle  getting_started.doctree  index.doctree
docs/_build/html/: .buildinfo  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/doctrees/: api_endpoints.doctree  email_configuration.doctree  environment.pickle  getting_started.doctree  index.doctree  jwt_settings.doctree  knox_settings.doctree
docs/html/: .buildinfo  api_endpoints.html  email_configuration.html  genindex.html  getting_started.html  index.html  jwt_settings.html  knox_settings.html  objects.inv  search.html  searchindex.js
docs/html/_sources/: api_endpoints.rst.txt  email_configuration.rst.txt  getting_started.rst.txt  index.rst.txt  jwt_settings.rst.txt  knox_settings.rst.txt
drf_auth_jwt/: serializers.py  views.py
drf_auth_jwt_cu/: urls.py  views.py
drf_auth_knox/: urls.py  views.py
drf_auth_knox_cu/: urls.py  views.py
