[metadata]
name = drf-authentication-simple
version = 0.0.2
author = Ahmet Deger
author_email = adeger@protonmail.com
description = For drf simple authentication with custom user model 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/degerahmet/drf-authentication
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.5
include_package_data = True